# BEngine_CPP

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
BEngineClient/: CMakeLists.txt
BEngineCore/: BEngine.cpp  BEngine.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  Graphics.cpp  Graphics.h  ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h  ScriptLinker.cpp  ScriptLinker.h  Window.cpp  Window.h
BEngineCore/SDL2/lib/Debug/: SDL2d.exp  SDL2d.lib  SDL2maind.lib
BEngineCore/SDL2/lib/Release/: SDL2.exp  SDL2.lib  SDL2main.lib
BEngineCore/mono/lib/Debug/: MonoPosixHelper.exp  eglib.lib  libgcmonosgen.lib  libmonoutils.lib  libtest.exp  mono-2.0-dac-sgen.exp  mono-2.0-sgen.exp
BEngineCore/mono/lib/Release/: MonoPosixHelper.exp  eglib.lib  libgcmonosgen.lib  libmonoutils.lib  libtest.exp  mono-2.0-dac-sgen.exp  mono-2.0-sgen.exp
BEngineEditor/: BEngineEditor.cpp  CMakeLists.txt  EditorWindow.cpp  EditorWindow.h
BEngineScriptCore/: CMakeLists.txt  Main.cs
Predefined/: BEngineEditorGUI.ini
